# TS_benchmark

./: .gitignore  README.md  pyproject.toml  setup.py  test.ipynb  test_module.py
compactformer/: __init__.py  datasets.py  eval.py  plots.py  signals.py  train.py
scripts/: run_autoformer_grid.py  run_informer_grid.py  run_patchtst_grid.py  run_sda_autoformer_grid.py  run_sda_informer_grid.py  run_sda_patchtst_grid.py
simulation_results_sda/: noisy_informer_results_full.csv  noisy_patch_results_full.csv
src/: __init__.py
src/models/: autoformer.py  informer.py  patchtst.py  sda_autoformer.py  sda_blocks.py  sda_informer.py  sda_patchtst.py
